...
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <string name="cell_content_description">%1$d, %2$d</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="step">Step</string>
    <string name="target_steps_per_second">Target steps per second: %1$.2f</string>
    <string name="generations_per_step">Generations per step: %1$d</string>
    <string name="expand">Expand</string>
    <string name="collapse">Collapse</string>
    <string name="enable_autofit">Enable autofit</string>
    <string name="disable_autofit">Disable autofit</string>
    <string name="offset">Offset: x = %1$.1f, y = %2$.1f</string>
    <string name="scale">Scale: %1$.2f</string>
    <string name="paused">Paused</string>
    <string name="generations_per_second_short">GPS: %1$.2f</string>
...
